# consonance

./: .gitignore  CONVERSION_GUIDE.md  README.md  implementation.md  main.html  masterplan.md  package-lock.json  schemas.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  database.py  deps.py  main.py
backend/app/models/: __init__.py  argument.py  comment.py  policy.py  source.py  summary.py  vote.py
backend/app/routers/: arguments.py  comments.py  policies.py  sources.py  summaries.py  votes.py
backend/app/schemas/: __init__.py  argument.py  comment.py  common.py  policy.py  source.py  summary.py  vote.py
backend/app/services/: argument_service.py  comment_service.py  policy_service.py  source_service.py  summary_service.py  vote_service.py
backend/tests/: test_api.py
frontend/: .gitignore  ARCHIVE_PAGE_NOTES.md  README.md  package.json  prototype.html  tailwind.config.js  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  globals.css
frontend/src/components/: ChatBox.tsx  DiscourseSection.tsx  EngagementMetrics.tsx  EvidenceCard.tsx  FilterBar.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  MaterialIcon.tsx  PolicyCard.tsx  PolicyHeader.tsx  StatusBadge.tsx  index.ts
frontend/src/lib/: api.ts
frontend/src/pages/: ArchivePage.tsx  DiscussionPage.tsx  HomePage.tsx  LandingPage.tsx
frontend/src/types/: index.ts
