[project]
name = "consonance-backend"
version = "0.1.0"
description = "Consonance MVP backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "aiosqlite>=0.20.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "openai>=1.51.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "alembic>=1.14.0",
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
